Fixed Mobile Alignment Issue

--- a/src/index.css
+++ b/src/index.css
@@ -261,6 +261,13 @@ i:hover {
   text-decoration: none;
 }
 
+.info  {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 @keyframes scaleIn {
   from {
     transform: scale(0.3);
@@ -308,11 +315,16 @@ i:hover {
   }
   .main-content p {
     font-size: 16px;
-
+    width: 100vw;
     text-align: center;
   }
   section {
     display: flex;
     flex-direction: column-reverse;
+  }
+
+  .info {
+    width: 100vw;
+    padding:50px;
   }
 }
